# Alpha1t

./: .gitignore  COMPLETE_STATUS_AND_PLAN.md  FINAL_SUMMARY.md  OVERNIGHT_TRAINING_STATUS.md  POST_TRAINING_PLAN.md  README.md  TRAINING_GUIDE.md  monitor_training.sh  start_mixed_opponent_training.sh  start_overnight_training.sh  stop_training.sh
alpha_1000/: CHANGELOG.md  README.md  __init__.py  pyproject.toml
alpha_1000/.github/workflows/: ci.yml
alpha_1000/bots/: arena.py  base_bot.py  greedy_bot.py  heuristic_bot.py  random_bot.py
alpha_1000/docs/: api.md  architecture.md  rules.md
alpha_1000/engine/: actions.py  cards.py  exceptions.py  game.py  marriages.py  rules.py  rules_tysiac.yaml  state.py
alpha_1000/engine/phases/: bidding.py  musik.py  play.py  scoring.py
alpha_1000/rl/: curriculum.py  dense_rewards.py  encoding.py  replay.py  rewards.py
alpha_1000/rl/ppo_lstm/: a2c_trainer.py  agent.py  buffer.py  evaluator.py  full_game_evaluator.py  mixed_opponent_selfplay.py  mixed_trainer.py  network.py  selfplay.py  stable_selfplay.py  trainer.py
alpha_1000/scripts/: benchmark.py  setup.sh  test.sh  train.sh
alpha_1000/tests/fixtures/: hands.py  scenarios.json
alpha_1000/tests/integration/: test_determinism.py  test_edge_cases.py  test_full_game.py  test_training_e2e.py
alpha_1000/tests/unit/: test_bidding.py  test_bombing.py  test_cards.py  test_encoding.py  test_melds.py  test_rl_pipeline.py  test_scoring.py  test_tricks.py
alpha_1000/ui/: app.py
alpha_1000/ui/components/: bidding_panel.py  game_log.py  game_status.py  hand_display.py  (+1 more)
(+2 files in other folders)
